guess we dont need overflow:hidden in #wrap on modal? should prevent a reflow and also all kinds of other masonry layout issues (hoping)

--- a/css/template.less
+++ b/css/template.less
@@ -102,7 +102,7 @@ body.page-slide #tmp-slide {display: block;}
 
 body.settings,
 body.modal:not(.search) {
-	#wrap {height: 100%; overflow: hidden;}
+	//#wrap {height: 100%; overflow: hidden;}
 }
 
 //body.settings,
